# minecraft_clone

./: .gitignore  Cargo.toml  MESH_PERF_PROFILE.md  MESH_PERF_SCRATCHPAD.md  README.md
.cargo/: config.toml
assets/shaders/: block_material.wgsl  dropped_block.wgsl  vertex_pulling.wgsl
benches/: chunk_mesh_pipeline.rs  chunk_meshing.rs  ecs_queries.rs  light_propagation.rs  vertex_pulling.rs  vp_gpu_bind_groups.rs
docs/: audio_system.md  cell_id_binary_meshing_plan.md  contiguous-query-candidates.md  day_night_lighting_notes.md  deferred_architecture.md  dimension_switching_plan.md  light_upload_followup_plan.md  region_meshing_plan.md  runtime_block_state_palette_plan.md  runtime_palette_implementation_review.md  sodium_occlusion_culling_notes.md  terrain_texture_bundle_plan.md  vertex_pulling_plan.md
docs/water_translucency/: README.md  blocks_and_assets.md  fluids.md  minecraft_water_rendering_research.md  rendering.md  water_flow_rendering_research.md
examples/: perf_binary_mesh.rs  perf_chunk_streaming.rs  perf_light_upload.rs
src/: app.rs  audio.rs  block.rs  block_material.rs  chunk.rs  dimension.rs  game_state.rs  input.rs  lib.rs  light.rs  main.rs  memory.rs  mesh.rs  mob.rs  player.rs  quad.rs  textures.rs  util.rs
src/block/: mod.rs  properties.rs  visual.rs
src/chunk/: collider.rs  mesh.rs  mod.rs  util.rs
src/item/: catalog.rs  mod.rs  stack.rs
src/item/dropped/: mod.rs  render.rs
src/mob/: collide_and_slide.rs  controller.rs  mod.rs  tests.rs
src/player/: block_interaction.rs  block_interaction_tests.rs  cam.rs  classic_controller.rs  click_handler.rs  control.rs  fly_controller.rs  inspector.rs  laser.rs  mod.rs  persistence.rs  spawn.rs
src/player/interaction/: mod.rs  tests.rs
src/ui/: crosshair.rs  debug.rs  fps.rs  hotbar.rs  mod.rs  pause_menu.rs
src/world/: definition.rs  dimension.rs  generation.rs  loading.rs  mod.rs  storage.rs
src/world/chunk/: ambient_occlusion.rs  codec.rs  collider.rs  components.rs  coords.rs  data.rs  fluid.rs  fluid_sim.rs  invalidation.rs  light.rs  mesh.rs  mod.rs  mutation.rs  neighborhood.rs  state.rs  tests.rs
src/world/chunk/light/: block.rs  mod.rs  propagation.rs  region.rs  sky.rs  solver.rs  storage.rs  tests.rs  updates.rs  utils.rs
src/world/chunk/mesh/: adaptive.rs  binary.rs  bitmask.rs  blocks.rs  buffer.rs  components.rs  direct.rs  face.rs  greedy.rs  greedy_partitioned.rs  greedy_region.rs  hybrid.rs  light.rs  mod.rs  reference.rs  shell.rs  sweep.rs  systems.rs  tests.rs  vertex_pulling.rs
src/world/chunk/mesh/mesher/: ao.rs  binary.rs  mod.rs  scalar.rs  visibility.rs  water.rs
src/world/chunk/mesh/mesher/binary/: tests.rs
src/world/chunk/mesh/render/: material.rs  mod.rs  visuals.rs
src/world/chunk/mesh/render/vertex_pulling/: mod.rs  pipeline.rs  prepare.rs  queue.rs
src/world/dimension/: derived_work.rs  fluid.rs  invalidation.rs  lifecycle.rs  light.rs  light_patch.rs  light_task.rs  mod.rs  persistence.rs  switching.rs  tasks.rs  view.rs
src/world/dimension/persistence/: tests.rs
src/world/dimension/streaming/: mod.rs  state.rs  systems.rs  tests.rs
src/world/storage/: memory.rs  mod.rs  sqlite.rs  tests.rs  turso.rs
tests/: wgsl_validation.rs
