[package]
name = "minecraft_clone"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", features = ["wayland", "dynamic_linking"] }
#NOTE: Disabling bevy/dynamic_linking may improve the performance of this linker (mold).
avian3d = { version = "0.6.1" }
bevy-inspector-egui = { version = "0.36.0" }
rand = { version = "0.10.1" }
strum = { version = "0.28.0", features = ["derive"] }
itertools = "0.14.0"
bevy_framepace = "0.21.0"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
