[package]
name = "minecraft_clone"
version = "0.1.0"
edition = "2024"

[features]
default = []
turso-store = ["dep:tokio", "dep:turso"]

[dependencies]
bevy = { version = "0.18.1", features = ["wayland", "dynamic_linking"] }
#NOTE: Disabling bevy/dynamic_linking may improve the performance of this linker (mold).
avian3d = { version = "0.6.1" }
bevy-inspector-egui = { version = "0.36.0" }
rusqlite = { version = "0.40.1", features = ["bundled"] }
tokio = { version = "1.0", features = ["rt-multi-thread"], optional = true }
turso = { version = "0.7.0-pre.7", default-features = false, optional = true }
strum = { version = "0.28.0", features = ["derive"] }
itertools = "0.14.0"
bevy_framepace = "0.21.0"
bevy_shader = "0.18.1"
bevy_mesh = "0.18.1"
bytemuck = { version = "1", features = ["derive"] }
image = "0.25"
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "chunk_meshing"
harness = false

[[bench]]
name = "chunk_mesh_pipeline"
harness = false

[[bench]]
name = "light_propagation"
harness = false


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
