[package]
name = "minecraft_clone"
version = "0.1.0"
edition = "2024"

[features]
default = []
turso-store = ["dep:tokio", "dep:turso"]

[dependencies]
bevy = { version = "0.19.0", features = ["wayland", "dynamic_linking"] }
#NOTE: Disabling bevy/dynamic_linking may improve the performance of this linker (mold).
avian3d = { version = "0.7.0" }
bevy-inspector-egui = { version = "0.37.0" }
rusqlite = { version = "0.40.1", features = ["bundled"] }
tokio = { version = "1.0", features = ["rt-multi-thread"], optional = true }
turso = { version = "0.7.0-pre.7", default-features = false, optional = true }
strum = { version = "0.28.0", features = ["derive"] }
itertools = "0.15.0"
bevy_shader = "0.19.0"
bevy_mesh = "0.19.0"
bevy-settings = "0.19.0"
bevy_dev_tools = "0.19.0"
bytemuck = { version = "1", features = ["derive"] }
image = "0.25"
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }

[dev-dependencies]
criterion = "0.8.2"
naga = { version = "29.0.3", features = ["wgsl-in"] }
wgpu = { version = "29.0.3", default-features = false, features = ["wgsl", "dx12", "metal", "vulkan", "naga-ir"] }

[[bench]]
name = "light_propagation"
harness = false

[[bench]]
name = "chunk_meshing"
harness = false

[[bench]]
name = "ecs_queries"
harness = false

[[bench]]
name = "vp_gpu_bind_groups"
harness = false


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
